--- a/templates/form.html
+++ b/templates/form.html
@@ -7,29 +7,29 @@
         <meta name="author" content="" />
         <title>Поиск вакансий (фильтры)</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+        <link rel="stylesheet" type="text/css" href="/static/css/styles.css"/>
+<!---->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+<!--        <link href="static/css/styles.css" rel="stylesheet" />-->
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Парсер HH.ru</a>
+                <a class="navbar-brand" href="/">Парсер HH.ru</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="index.html">Главная</a></li>
-                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="form.html">Форма поиска</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="results.html">Результат</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/">Главная</a></li>
+                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/form/">Форма поиска</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/results/">Результат</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
 
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="results.html">
+                        <form id="contactForm" data-sb-form-api-token="API_TOKEN" method="post">
                             <!-- имя запроса-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" name="query_string" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
@@ -59,15 +59,16 @@
                                 <div class="invalid-feedback" data-sb-feedback="name:required">Необходимо ввести запрос</div>
                             </div>
 
-
+<!--search_field=name&search_field=company_name&search_field=description-->
                             <p>
                                 <select name="where" class="form-control">
-                                    <option value="all">Везде</option>
-                                    <option value="company">В названии компании</option>
+                                    <option value="description">В описание</option>
+                                    <option value="company_name">В названии компании</option>
                                     <option selected value="name">В названии вакансии</option>
                                 </select>
                             </p>
-                          <button class="btn btn-primary" type="submit">Искать вакансии</button>
+                          <button class="btn btn-primary" type="submit" >Искать вакансии</button>
+
 
                     </form>
 
