--- a/templates/results.html
+++ b/templates/results.html
@@ -117,6 +117,7 @@
                             <th>Название</th>
                             <th>Зарплата</th>
                             <th>Описание</th>
+                            <th>Навыки</th>
                             <th>Ссылка на страницу на hh.ru</th>
                         </tr>
                     <thead>
@@ -134,6 +135,10 @@
                                 <td>Не указана</td>
                             {% endif %}
                             <td>{% if vacanc.snippet.responsibility %}{{vacanc.snippet.responsibility}} {% else %}Нет описания{% endif %}</td>
+                           <td>{% for skil in vacanc.skills %}
+                             {{skil.name}};
+
+                           {% endfor %}</td>
                             <td> <a href={{vacanc.url_vacancy}}> {{vacanc.url_vacancy}}</a></td>
                         </tr>
                         {% endfor %}
