--- a/templates/results.html
+++ b/templates/results.html
@@ -33,6 +33,8 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/">Главная</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/form/">Форма поиска</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/results/">Результат</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/sql/">Результат SQL</a></li>
+
                     </ul>
                 </div>
             </div>
@@ -80,12 +82,7 @@
                         <!--    ul - список-->
                             <ul>
                                 <table class="table-responsive" >
-<!--                                    <thead>-->
-<!--                                        <tr>-->
-<!--                                            <th>Название</th>-->
-<!--                                            <th align="center">Навык</th>-->
-<!--                                        </tr>-->
-<!--                                    <thead>-->
+
                                     <tbody>
 
                                         {% for skil in key_skill %}
@@ -130,7 +127,7 @@
                             {% if vacanc.salary%}
                                 <td>{% if  vacanc.salary.from %}от {{vacanc.salary.from}} {% endif %}
                                     {% if  vacanc.salary.to %}до {{vacanc.salary.to}} {% endif %}
-                                    {% if  vacanc.salary.currency == "RUR" %} ₽ {% endif %}</td>
+                                    {% if  vacanc.salary.currency == "RUR" %} ₽ {% else%} {{vacanc.salary.currency}} {% endif %}</td>
                             {% else %}
                                 <td>Не указана</td>
                             {% endif %}
