--- a/templates/SQL_orm.html
+++ b/templates/SQL_orm.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Результаты SQL</title>
+        <title>Результаты SQL_orm</title>
         <!-- Favicon-->
         <link rel="stylesheet" type="text/css" href="/static/css/styles.css"/>
 
@@ -15,8 +15,6 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
 <!--        <link href="static/css/styles.css" rel="stylesheet" />-->
-
-
 
     </head>
     <body id="page-top">
